--- a/src/App.css
+++ b/src/App.css
@@ -163,11 +163,14 @@ nav {
   font-size: 12px;
   line-height: 18px;
   color: #06942a;
-  background-color: #d4f4dc;
+  transition: all 0.5s;
   border-radius: 50px;
   padding: 3px 9px;
   display: flex;
   align-items: center;
+}
+.status:hover {
+  background-color: #d4f4dc;
 }
 
 .work {
@@ -392,7 +395,53 @@ nav {
   justify-content: center;
   gap: 15px;
 }
+.icon_1 {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+  display: none;
+}
+.side_menu {
+  display: none;
+}
+.icon_2 {
+  display: none;
+}
 @media screen and (max-width: 768px) {
+  .icon_1 {
+    display: block;
+  }
+  .icon_2 {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+  }
+  .side_menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: -100%;
+    top: 0;
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
+    z-index: 18;
+    transition: 850ms;
+  }
+  .side_menu.active {
+    right: 0;
+    transition: 350ms;
+  }
+  .side_text {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+    padding: 30px 50px;
+    cursor: pointer;
+    border-bottom: 2px solid gray;
+  }
+
   .header {
     width: 360px;
     left: 20px;
@@ -451,7 +500,14 @@ nav {
     display: none;
   }
   .work_details {
-    width: 100%;
+    width: 350px;
+  }
+  .work_details h3 {
+    font-size: 28px;
+  }
+
+  .work_detail p {
+    font-size: 14px;
   }
   .get_started {
     display: none;
@@ -493,5 +549,11 @@ nav {
   }
   .customer_texts p {
     margin-top: 50px;
+  }
+  .recommend {
+    display: none;
+  }
+  .actions {
+    display: none;
   }
 }
