--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ nav {
   align-items: center;
   gap: 20px;
 }
+nav p {
+  font-weight: 600;
+  cursor: pointer;
+}
 .actions {
   display: flex;
   justify-content: center;
@@ -230,6 +234,7 @@ nav {
   height: 275px;
   border: 1px solid #e5e5e5;
   border-radius: 15px;
+  cursor: pointer;
 }
 .position {
   font-size: 21px;
@@ -413,16 +418,18 @@ nav {
   }
   .icon_2 {
     position: absolute;
-    right: 20px;
+    right: 30px;
     top: 20px;
     cursor: pointer;
+    font-size: 30px;
+    display: block;
   }
   .side_menu {
     display: flex;
     flex-direction: column;
     position: fixed;
     right: -100%;
-    top: 0;
+    top: 0px;
     background-color: #ffffff;
     width: 100%;
     height: 100%;
@@ -441,17 +448,19 @@ nav {
     cursor: pointer;
     border-bottom: 2px solid gray;
   }
-
+  .side_text:hover {
+    border-bottom: #027a48 solid 2px;
+  }
   .header {
-    width: 360px;
-    left: 20px;
+    width: 100vw;
+    left: 10px;
   }
   nav {
     display: none;
   }
 
   .hero-text {
-    width: 350px;
+    width: 100vw;
     gap: 40px;
     margin: 0 10px;
   }
@@ -484,6 +493,10 @@ nav {
   .hero_style {
     display: none;
   }
+  .hero-img img {
+    width: 130px;
+    height: 33px;
+  }
   .work {
     display: block;
     width: 100%;
@@ -500,7 +513,7 @@ nav {
     display: none;
   }
   .work_details {
-    width: 350px;
+    width: 100vw;
   }
   .work_details h3 {
     font-size: 28px;
@@ -526,12 +539,14 @@ nav {
     max-width: 100%;
   }
   .category {
+    width: 100vw;
+    justify-content: center;
     display: grid;
     grid-template-columns: repeat(2, 160px);
     gap: 20px;
   }
   .categories {
-    margin: 20px 10px;
+    margin: 20px auto;
   }
   .arrows {
     margin-top: -30px;
